--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>sancedan</title>
-    <!-- <link rel="stylesheet" href="/static/reset.css"> -->
+    <title>三测单</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
